--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ a {
 }
 
 a:hover, a:focus, a:active {
-    color: #39b54a;
+    color: #29b7b3;
 }
 
 a:hover, a:active {
@@ -312,7 +312,7 @@ ul.disc li::before {
     width: 8px;
     height: 8px;
     border-radius: 50%;
-    background: #39b54a;
+    background: #29b7b3;
     position: absolute;
     left: -17px;
     top: 11px;
@@ -321,7 +321,7 @@ ul.disc li::before {
 
 dt {
     margin: 0;
-    color: #39b54a;
+    color: #29b7b3;
 }
 
 dd {
@@ -429,8 +429,6 @@ form,
 .cl-custom-select {
     margin-bottom: 3rem;
 }
-
-
 /* ------------------------------------------------------------------- 
  * ## pace.js styles - minimal
  * ------------------------------------------------------------------- */
@@ -441,13 +439,12 @@ form,
     -moz-user-select: none;
     user-select: none;
 }
-
 .pace-inactive {
     display: none;
 }
 
 .pace .pace-progress {
-    background: #39b54a;
+    background: #29b7b3;
     position: fixed;
     z-index: 900;
     top: 0;
@@ -490,7 +487,7 @@ form,
 }
 
 .line-scale-pulse-out > div {
-    background-color: #39b54a;
+    background-color: #29b7b3;
     width: 4px;
     height: 35px;
     border-radius: 2px;
@@ -717,7 +714,7 @@ textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-    -webkit-text-fill-color: #39b54a;
+    -webkit-text-fill-color: #29b7b3;
     transition: background-color 5000s ease-in-out 0s;
 }
 
@@ -777,8 +774,8 @@ button.btn--primary,
 input[type="submit"].btn--primary,
 input[type="reset"].btn--primary,
 input[type="button"].btn--primary {
-    background: #39b54a;
-    border-color: #39b54a;
+    background: #29b7b3;
+    border-color: #29b7b3;
     color: #FFFFFF;
 }
 
@@ -792,8 +789,8 @@ button.btn--primary:focus,
 input[type="submit"].btn--primary:focus,
 input[type="reset"].btn--primary:focus,
 input[type="button"].btn--primary:focus {
-    background: #33a242;
-    border-color: #33a242;
+    background: #29b7b3;
+    border-color: #29b7b3;
 }
 
 
@@ -1109,7 +1106,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     line-height: 1.333;
     text-transform: uppercase;
     letter-spacing: .25rem;
-    color: #39b54a;
+    color: #29b7b3;
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -1283,7 +1280,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 
 .slick-slider .slick-dots li.slick-active button,
 .slick-slider .slick-dots li:hover button {
-    background: #39b54a;
+    background: #29b7b3;
 }
 
 
@@ -1376,7 +1373,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     letter-spacing: .25rem;
     margin-bottom: 4.8rem;
     margin-top: .9rem;
-    color: #39b54a;
+    color: #29b7b3;
 }
 
 .header-nav p {
@@ -1514,7 +1511,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     font-size: 1.3rem;
     text-transform: uppercase;
     letter-spacing: .3rem;
-    color: #39b54a;
+    color: #29b7b3;
     -webkit-transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
 }
@@ -1722,8 +1719,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-content__scroll a::before {
-    border-bottom: 2px solid #39b54a;
-    border-right: 2px solid #39b54a;
+    border-bottom: 2px solid #29b7b3;
+    border-right: 2px solid #29b7b3;
     content: '';
     display: block;
     height: 8px;
@@ -1747,7 +1744,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     display: block;
     width: 2px;
     height: 10.2rem;
-    background-color: #39b54a;
+    background-color: #29b7b3;
     position: absolute;
     right: 7.2rem;
     bottom: 0;
@@ -1807,7 +1804,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 }
 
 .home-social span {
-    color: #39b54a;
+    color: #29b7b3;
     right: 4.5rem;
     font-size: 1.3rem;
     opacity: 0;
@@ -2063,7 +2060,7 @@ html.no-csstransitions .home-content__main {
 .s-about {
     padding-top: 16.2rem;
     padding-bottom: 9rem;
-    background-color: #39b54a;
+    background-color: #29b7b3;
     color: #010507;
     position: relative;
 }
@@ -2268,7 +2265,7 @@ html.no-csstransitions .home-content__main {
 
 .services-list .service-icon {
     float: left;
-    color: #39b54a;
+    color: #29b7b3;
     font-size: 4.8rem;
     margin-top: -.6rem;
 }
@@ -2837,7 +2834,7 @@ html.no-csstransitions .home-content__main {
     padding: 0 2rem;
     margin: 0;
     color: #FFFFFF;
-    background: #39b54a;
+    background: #29b7b3;
 }
 
 .s-contact .form-field label::after {
@@ -2848,14 +2845,14 @@ html.no-csstransitions .home-content__main {
     margin-top: -6px;
     border-top: 5px solid transparent;
     border-bottom: 5px solid transparent;
-    border-right: 5px solid #39b54a;
+    border-right: 5px solid #29b7b3;
 }
 
 .contact__line {
     display: block;
     width: 2px;
     height: 20.4rem;
-    background-color: #39b54a;
+    background-color: #29b7b3;
     position: absolute;
     left: 50%;
     top: -10.2rem;
@@ -2882,7 +2879,7 @@ html.no-csstransitions .home-content__main {
 
 .contact-content h5 {
     margin-top: 0;
-    color: #39b54a;
+    color: #29b7b3;
 }
 
 .contact-content input[type="email"],
@@ -2909,7 +2906,7 @@ html.no-csstransitions .home-content__main {
 .contact-content textarea:focus,
 .contact-content select:focus {
     color: #FFFFFF;
-    border-bottom: 1px solid #39b54a;
+    border-bottom: 1px solid #29b7b3;
 }
 
 .contact-content button,
@@ -3000,7 +2997,7 @@ html.no-csstransitions .home-content__main {
 
 .contact-social li a:hover, 
 .contact-social li a:focus {
-    color: #39b54a;
+    color: #29b7b3;
 }
 
 .contact-social li:last-child {
@@ -3023,7 +3020,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .message-success {
-    color: #39b54a;
+    color: #29b7b3;
 }
 
 .message-warning i, .message-success i {
@@ -3215,7 +3212,7 @@ footer a {
 }
 
 footer a:hover, footer a:focus, footer a:active {
-    color: #39b54a;
+    color: #29b7b3;
 }
 
 footer .row {
@@ -3307,8 +3304,8 @@ footer .row {
     top: 0;
     right: 0;
     color: #FFFFFF;
-    background: #39b54a;
-    border-color: #39b54a;
+    background: #29b7b3;
+    border-color: #29b7b3;
     padding: 0 20px;
 }
 
