--- a/css/main.css
+++ b/css/main.css
@@ -2784,16 +2784,13 @@ html.no-csstransitions .home-content__main {
         font-size: 1.9rem;
     }
 }
-
-
-
 /* ===================================================================
  * # contact 
  *
  * ------------------------------------------------------------------- */
 .s-contact {
     background-color: #151515;
-    background-image: url("../images/contact-bg.jpg");
+    background-image: url("../images/tell.png");
     background-repeat: no-repeat;
     background-position: center, center;
     padding-top: 15rem;
@@ -3433,7 +3430,6 @@ footer .row {
         bottom: 0;
     }
 }
-
 @media only screen and (max-width: 500px) {
     .footer-subscribe #mc-form input[type="email"] {
         padding: 1.2rem 20px 1.2rem;
@@ -3449,7 +3445,6 @@ footer .row {
         text-align: center;
     }
 }
-
 @media only screen and (max-width: 400px) {
     .footer-main .left {
         padding-right: 0;
@@ -3458,6 +3453,4 @@ footer .row {
         padding-left: 0;
     }
 }
-
-
 /*# sourceMappingURL=main.css.map */
